# dotfiles

./: .gitignore  .todo  TODO.md  biome.json  build.zig  build.zig.zon  package.json  readme.md  todo.md
csharp/: .csharpierrc.json  Dotfiles.sln
csharp/.config/: dotnet-tools.json
csharp/DotfilesCli/: DotfilesCli.csproj
dotfiles/: package.json
fedora-old/: output.txt
nest/: package.json
old/src/: diff.sh  (+6 more)
scripts/: init.sh  run.sh
src/: antidote.zig  apt.sh  autostart.sh  autostart.zig  backup.zig  bash.sh  bash.zig  bun.sh  bun.zig  code.zig  codium.zig  dconf.sh  diff.sh  distrobox.zig  dmi.zig  dnf.sh  doas.sh  dotfiles.zig  dotnet.sh  fastfetch.sh  fastfetch.zig  fedora.sh  fish.sh  flatpak.sh  fmt.sh  font.sh  fonts.zig  ghostty.zig  git.sh  git.zig  gitlab.sh  gitlab.zig  helix.zig  homebrew.sh  homebrew.zig  jj.zig  jujutsu.zig  main.sh  main.zig  nala.sh  (+24 more)
~/Projects/com.gitlab.yunieralvarez.game-top-down-shooter-rs/game-top-dow-shooter-rs/: Cargo.toml
~/Projects/com.gitlab.yunieralvarez.game-top-down-shooter-rs/game-top-dow-shooter-rs/src/: animation.rs  camera.rs  cursor.rs  debug.rs  ecs.rs  game.rs  main.rs  map.rs  movement.rs  noise.rs  player.rs  render.rs  weapon.rs
~/Projects/com.gitlab.yunieralvarez.game-top-down-shooter-rs/game-top-dow-shooter-rs/src/map/: constants.rs  events.rs  helpers.rs
~/Projects/com.gitlab.yunieralvarez.game-top-down-shooter-rs/game-top-dow-shooter-rs/src/map/constants/: assets.rs  chunks.rs  tiles.rs
~/Projects/com.gitlab.yunieralvarez.game-top-down-shooter-rs/game-top-dow-shooter-rs/src/noise/: helpers.rs
(+295 files in other folders)
