[package]
name = "top_down_shooter"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
iyes_perf_ui = "0.2.3"
noise = "0.9.0"
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3
